--- a/html-templates/note.html
+++ b/html-templates/note.html
@@ -1,4 +1,6 @@
+<!DOCTYPE html>
 <html>
+
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="markdown.css">
 
@@ -6,8 +8,6 @@
 	<title>{{.Title}}</title>
 </head>
 
-<body>
-{{.Note}}
-</body>
+<body>{{.Body}}</body>
 
 </html>
